--- a/01metodologiaBem/index.html
+++ b/01metodologiaBem/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="nombre-form"><input type="text" class="nombre-form__input">
+    <div class="nombre-form"><input type="text">
         <input type="text" class="nombre-form__input">
         <input type="text" class="nombre-form__input">
         <input type="text" class="nombre-form__input--active">
